# backend/src/autogenerated/types/index.ts
@@ -7,3 +7,4 @@ export * from './specialists/index.js';
 export * from './company-specialists/index.js';
 export * from './services/index.js';
 export * from './appointments/index.js';
+export * from './notifications/index.js';
